--- a/src/views/components/home/enhanced-slider.twig
+++ b/src/views/components/home/enhanced-slider.twig
@@ -13,22 +13,33 @@
       id="main-slider-{{ position }}"
       auto-play
       slider-config='{
-        "lazy": "false"
+        "lazy": "false",   
+        "navigation": false,
+        "autoplay": {
+          "delay": 2000,
+          "disableOnInteraction": false
+        },
+        "pagination": {
+          "el": ".swiper-pagination",
+          "clickable": true
+        }
       }'
-      type="fullwidth">
+      type="fullwidth"      
+    >
         <div slot="items">
             {% for slide in component.slides %}
                 <div class="swiper-slide w-full min-h-[300px] lg:min-h-[528px] bg-dark relative">
-					<div style="background-image: url({{ slide.image }});" class="overlay-bg bg-cover bg-center absolute inset-0"></div>
+                    <div style="background-image: url('{{ slide.image }}');" class="bg-cover bg-center absolute inset-0"></div>
                     
                     <div class="flex-center container pb-16 sm:pb-0 home-slider__content relative h-full">
-                        <div class=" w-4/6 text-center md:w-7/12 lg:w-5/12 text-white">
+                        <div class="w-4/6 text-center md:w-7/12 lg:w-5/12 text-white">
                             <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-4">{{ slide.title }}</h2>
                             <p data-swiper-parallax="-300" class="line-clamp-2 description">{{ slide.description }}</p>
                         </div>
                     </div>
                 </div>
             {% endfor %}
-        </div>
+        </div>    
+        <div class="swiper-pagination"></div>
     </salla-slider>
-</section> 
+</section>
