--- a/public/app.css
+++ b/public/app.css
@@ -514,6 +514,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .mx-1{margin-left:0.25rem;margin-right:0.25rem}
 .mx-1\.5{margin-left:0.375rem;margin-right:0.375rem}
 .mx-2{margin-left:0.5rem;margin-right:0.5rem}
+.mx-auto{margin-left:auto;margin-right:auto}
 .-mb-52{margin-bottom:-13rem}
 .-mt-62{margin-top:-248px}
 .mb-1{margin-bottom:0.25rem}
@@ -635,7 +636,6 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .flex-col{flex-direction:column}
 .flex-wrap{flex-wrap:wrap}
 .items-start{align-items:flex-start}
-.items-end{align-items:flex-end}
 .items-center{align-items:center}
 .items-baseline{align-items:baseline}
 .justify-start{justify-content:flex-start}
@@ -4818,6 +4818,9 @@ input[type=radio].sr-only:checked ~ div#nav-cart span {
 .footer-is-light .store-footer .social-link{--tw-border-opacity:1;border-color:rgba(209, 213, 219, 1);border-color:rgba(209, 213, 219, var(--tw-border-opacity, 1))}
 .footer-is-light .store-footer .contact-social{--tw-border-opacity:1;border-color:rgba(243, 244, 246, 1);border-color:rgba(243, 244, 246, var(--tw-border-opacity, 1))}
 .copyright-text p{--tw-text-opacity:1;color:rgba(55, 65, 81, 1);color:rgba(55, 65, 81, var(--tw-text-opacity, 1))}
+.icon-social {
+  color: gray !important;
+}
 .main-menu > li > a[href*=offer]{--tw-text-opacity:1;color:rgba(153, 27, 27, 1);color:rgba(153, 27, 27, var(--tw-text-opacity, 1))}
 @media only screen and (min-width: 1024px) {
   .main-menu{margin-left:1.5rem;margin-right:1.5rem;display:none;flex-wrap:wrap;align-items:center;padding-top:2rem;padding-bottom:0px}
@@ -5586,6 +5589,9 @@ model-viewer[style*=width]:before{display:none}
 .blog-slider .swiper-slide img{max-height:480px;min-height:380px}
 @media (min-width: 768px){
 .blog-slider .swiper-slide img{max-height:680px}}
+.s-slider-next, .s-slider-prev {
+  display: none !important;
+}
 .product-entry{position:relative;display:flex;height:100%;justify-content:space-between;border-radius:0.5rem;--tw-bg-opacity:1;background-color:rgba(255, 255, 255, 1);background-color:rgba(255, 255, 255, var(--tw-bg-opacity, 1));transition-property:box-shadow;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:300ms}
 .product-entry:hover{--tw-shadow:5px 10px 30px #2B2D340D;;--tw-shadow-colored:5px 10px 30px var(--tw-shadow-color);box-shadow:0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), 5px 10px 30px #2B2D340D;;box-shadow:var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow)}
 .product-entry--wishlist{flex-direction:column;justify-content:space-between;padding:1rem}
@@ -5846,6 +5852,18 @@ input[type=radio].sr-only:checked ~ div#offer-corner-badge {
 .cart-options salla-product-options .s-product-options-multiple-options-wrapper{display:block !important}
 salla-quantity-input[max="1"] input{pointer-events:none;opacity:0.5}
 salla-quantity-input[max="1"] .s-quantity-input-button{cursor:not-allowed}
+.s-product-card-content-main {
+  text-align: center;
+  transform: translateY(-60px);
+}
+salla-add-product-button {
+  border-radius: 8px !important;
+  outline: 8px solid white !important;
+}
+salla-add-product-button {
+  transform: translate(-100px, -75px);
+  background-color: black;
+}
 .brands-nav{display:flex;flex-wrap:wrap;justify-content:center}
 .brands-nav > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.5rem * 0);margin-right:calc(0.5rem * var(--tw-space-x-reverse));margin-left:calc(0.5rem * (1 - 0));margin-left:calc(0.5rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.5rem * calc(1 - 0));margin-left:calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));--tw-space-y-reverse:0;margin-top:calc(0.5rem * (1 - 0));margin-top:calc(0.5rem * (1 - var(--tw-space-y-reverse)));margin-top:calc(0.5rem * calc(1 - 0));margin-top:calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(0.5rem * 0);margin-bottom:calc(0.5rem * var(--tw-space-y-reverse))}
 .brands-nav:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:1}
