--- a/src/assets/styles/04-components/product.scss
+++ b/src/assets/styles/04-components/product.scss
@@ -404,3 +404,14 @@ salla-quantity-input[max='1']{
     @apply cursor-not-allowed
   }
 }
+.s-product-card-content-main {
+  text-align: center;
+  transform: translateY(-60px);
+}
+salla-add-product-button {
+  transform: translate(-100px , -75px);
+  background-color: black;
+  border-radius: 8px !important;
+  outline: 8px solid white !important;
+}
+ 
