--- a/src/assets/styles/04-components/slider.scss
+++ b/src/assets/styles/04-components/slider.scss
@@ -189,3 +189,6 @@ model-viewer[style*="width"]:before{
     @apply min-h-[380px] max-h-[480px] md:max-h-[680px];
   }
 }
+.s-slider-next , .s-slider-prev {
+  display: none !important;
+}
