--- a/public/app.css
+++ b/public/app.css
@@ -5861,8 +5861,20 @@ salla-add-product-button {
   outline: 8px solid white !important;
 }
 salla-add-product-button {
-  transform: translate(-100px, -75px);
+  transform: translateY(-75px);
   background-color: black;
+  justify-self: center;
+  display: block;
+  margin: 0 auto;
+}
+.s-product-card-image {
+  border-radius: 20px !important;
+}
+.s-product-card-wishlist-btn {
+  display: none;
+}
+.add-cart {
+  color: white;
 }
 .brands-nav{display:flex;flex-wrap:wrap;justify-content:center}
 .brands-nav > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.5rem * 0);margin-right:calc(0.5rem * var(--tw-space-x-reverse));margin-left:calc(0.5rem * (1 - 0));margin-left:calc(0.5rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.5rem * calc(1 - 0));margin-left:calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));--tw-space-y-reverse:0;margin-top:calc(0.5rem * (1 - 0));margin-top:calc(0.5rem * (1 - var(--tw-space-y-reverse)));margin-top:calc(0.5rem * calc(1 - 0));margin-top:calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(0.5rem * 0);margin-bottom:calc(0.5rem * var(--tw-space-y-reverse))}
