--- a/public/app.css
+++ b/public/app.css
@@ -580,7 +580,6 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .h-full{height:100%}
 .h-lg-banner{height:428px}
 .h-px{height:1px}
-.h-auto{height:auto}
 .max-h-0{max-height:0px}
 .max-h-8{max-height:2rem}
 .max-h-\[300px\]{max-height:300px}
@@ -3743,6 +3742,7 @@ input[type=radio].sr-only:checked ~ div.s-wallet-table-tbody-tr a {
 }
 .s-wallet-table-tbody-tr a:where([dir="ltr"], [dir="ltr"] *){left:0px}
 .s-wallet-table-tbody-tr a:where([dir="rtl"], [dir="rtl"] *){right:0px}
+.\[i\:i\+5\]{i:i+5}
 :root {
   --infinte-color: #c9c9c9;
   --main-text-color: #231f1e;
@@ -5876,6 +5876,12 @@ salla-add-product-button {
 .add-cart {
   color: white;
 }
+.s-slider-block__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .brands-nav{display:flex;flex-wrap:wrap;justify-content:center}
 .brands-nav > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.5rem * 0);margin-right:calc(0.5rem * var(--tw-space-x-reverse));margin-left:calc(0.5rem * (1 - 0));margin-left:calc(0.5rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.5rem * calc(1 - 0));margin-left:calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));--tw-space-y-reverse:0;margin-top:calc(0.5rem * (1 - 0));margin-top:calc(0.5rem * (1 - var(--tw-space-y-reverse)));margin-top:calc(0.5rem * calc(1 - 0));margin-top:calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(0.5rem * 0);margin-bottom:calc(0.5rem * var(--tw-space-y-reverse))}
 .brands-nav:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:1}
@@ -5912,6 +5918,55 @@ salla-add-product-button {
 .index .brand-item img{width:auto}
 @media (min-width: 480px){
 .index .brand-item img{max-width:150px}}
+.animate-marquee {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee 20s linear infinite;
+}
+.animate-marquee-reverse {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee-reverse 20s linear infinite;
+}
+.brand-item {
+  border-radius: 20px;
+  background-color: white;
+  width: 100px;
+  height: 100px;
+  transition: opacity 0.5s ease-in-out;
+}
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+}
+@keyframes marquee-reverse {
+  0% {
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+}
 .no-content-placeholder{display:flex;height:100%;flex-direction:column;align-items:center;justify-content:center;padding-top:2.5rem;padding-bottom:5rem;--tw-text-opacity:1;color:rgba(156, 163, 175, 1);color:rgba(156, 163, 175, var(--tw-text-opacity, 1))}
 .no-content-placeholder .icon{margin-bottom:1rem;display:flex;height:8rem;width:8rem;align-items:center;justify-content:center;border-radius:9999px;--tw-bg-opacity:1;background-color:rgba(243, 244, 246, 1);background-color:rgba(243, 244, 246, var(--tw-bg-opacity, 1));font-size:3rem;line-height:1;--tw-text-opacity:1;color:rgba(209, 213, 219, 1);color:rgba(209, 213, 219, var(--tw-text-opacity, 1))}
 .no-content-placeholder p{margin-bottom:1rem;font-size:1rem;line-height:1.5rem;--tw-text-opacity:1;color:rgba(107, 114, 128, 1);color:rgba(107, 114, 128, var(--tw-text-opacity, 1))}
@@ -6394,7 +6449,6 @@ lite-youtube.lyt-activated > .lty-playbtn {
 .group:hover .group-hover\:-translate-x-1{--tw-translate-x:-0.25rem;transform:translate(-0.25rem, var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}
 @media (min-width: 640px){
 .sm\:col-span-2{grid-column:span 2 / span 2}
-.sm\:row-span-2{grid-row:span 2 / span 2}
 .sm\:mb-0{margin-bottom:0px}
 .sm\:mb-24{margin-bottom:6rem}
 .sm\:mb-6{margin-bottom:1.5rem}
@@ -6405,7 +6459,6 @@ lite-youtube.lyt-activated > .lty-playbtn {
 .sm\:inline-flex{display:inline-flex}
 .sm\:grid{display:grid}
 .sm\:h-full{height:100%}
-.sm\:h-auto{height:auto}
 .sm\:\!w-\[220px\]{width:220px !important}
 .sm\:grow-0{flex-grow:0}
 .sm\:translate-y-0{--tw-translate-y:0px;transform:translate(var(--tw-translate-x), 0px) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}
@@ -6419,9 +6472,9 @@ lite-youtube.lyt-activated > .lty-playbtn {
 .sm\:p-1{padding:0.25rem}
 .sm\:py-16{padding-top:4rem;padding-bottom:4rem}
 .sm\:pb-0{padding-bottom:0px}
-.sm\:pt-20{padding-top:5rem}
 .sm\:pb-20{padding-bottom:5rem}
-.sm\:pt-12{padding-top:3rem}}
+.sm\:pt-12{padding-top:3rem}
+.sm\:pt-20{padding-top:5rem}}
 @media (min-width: 768px){
 .md\:sticky{position:sticky}
 .md\:-mb-2{margin-bottom:-0.5rem}
@@ -6450,7 +6503,6 @@ lite-youtube.lyt-activated > .lty-playbtn {
 .md\:grid-cols-3{grid-template-columns:repeat(3, minmax(0, 1fr))}
 .md\:grid-cols-4{grid-template-columns:repeat(4, minmax(0, 1fr))}
 .md\:grid-cols-\[repeat\(3\2c minmax\(0\2c 1fr\)\)\]{grid-template-columns:repeat(3,minmax(0,1fr))}
-.md\:grid-cols-5{grid-template-columns:repeat(5, minmax(0, 1fr))}
 .md\:flex-row{flex-direction:row}
 .md\:items-start{align-items:flex-start}
 .md\:items-center{align-items:center}
