--- a/src/assets/styles/04-components/brands.scss
+++ b/src/assets/styles/04-components/brands.scss
@@ -40,5 +40,33 @@
       @apply xs:max-w-[150px] w-auto;
     }
   }
+} 
+.animate-marquee {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee 20s linear infinite;
+}  
+.animate-marquee-reverse {
+  display: flex;
+  white-space: nowrap;
+  animation: marquee-reverse 20s linear infinite;
+} 
+.brand-item {
+  border-radius: 20px;
+  background-color: white;
+  width: 100px;
+  height: 100px;
+  transition: opacity 0.5s ease-in-out;
 }
- 
+@keyframes marquee {
+  0% { transform: translateX(0); opacity: 0; }
+  10% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { transform: translateX(-50%); opacity: 0; }
+}  
+@keyframes marquee-reverse {
+  0% { transform: translateX(-50%); opacity: 0; }
+  10% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { transform: translateX(0); opacity: 0; }
+}
