--- a/src/assets/styles/04-components/product.scss
+++ b/src/assets/styles/04-components/product.scss
@@ -426,4 +426,9 @@ salla-add-product-button {
 .add-cart {
   color: white;
 }
- 
+.s-slider-block__title {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;  
+}
