--- a/src/assets/styles/04-components/footer.scss
+++ b/src/assets/styles/04-components/footer.scss
@@ -1,6 +1,6 @@
 
 .store-footer {
-  @apply relative bg-darker text-white mt-8 sm:mt-16;
+  @apply relative bg-white text-white mt-8 sm:mt-16;
 
   a{
     @apply transition-opacity hover:opacity-75;
