--- a/src/assets/styles/04-components/brands.scss
+++ b/src/assets/styles/04-components/brands.scss
@@ -69,4 +69,17 @@
   10% { opacity: 1; }
   90% { opacity: 1; }
   100% { transform: translateX(0); opacity: 0; }
+} 
+.s-block__title {
+  display: flex;
+  justify-content: center;  
+  align-items: center; 
+}
+.right-side {
+  text-align: center;
+}
+h2 {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
