--- a/src/views/components/footer/footer.twig
+++ b/src/views/components/footer/footer.twig
@@ -45,7 +45,7 @@
 			{% if store.settings.tax.certificate %}
 			  <salla-modal sub-title-first sub-title="{{ trans('common.elements.tax_number') }}" modal-title="{{ store.settings.tax.number }}" id="modal-value-tax">
 				<div class="flex justify-center max-w-full">
-				  <img class="w-full" loading="lazy" 
+				  <img class="w-full logo-footer" loading="lazy" 
 				  src="{{ 'images/s-empty.png' | cdn }}" 
 				  data-src="{{ store.settings.tax.certificate }}" 
 				  alt="{{ store.settings.tax.number }}"/>
