--- a/src/views/components/home/enhanced-slider.twig
+++ b/src/views/components/home/enhanced-slider.twig
@@ -29,8 +29,7 @@
       <div slot="items">
           {% for slide in component.slides %}
               <div class="swiper-slide w-full min-h-[300px] lg:min-h-[528px] bg-dark relative">
-                  <div style="background-image: url('{{ slide.image }}');" class="bg-cover bg-center absolute inset-0"></div>
-                  
+                <div style="background-image: url('{{ slide.image }}'); background-size: contain; background-repeat: no-repeat; background-color: #fff;" class="bg-center absolute inset-0"></div>                  
                   <div class="flex-center container pb-16 sm:pb-0 home-slider__content relative h-full">
                       <div class="w-4/6 text-center md:w-7/12 lg:w-5/12 text-white">
                           <h2 data-swiper-parallax="-500" class="lg:text-title-size font-bold leading-tight mb-4">{{ slide.title }}</h2>
