--- a/public/app.css
+++ b/public/app.css
@@ -648,6 +648,7 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .gap-3{gap:0.75rem}
 .gap-4{gap:1rem}
 .gap-8{gap:2rem}
+.gap-80{gap:20rem}
 .space-x-1 > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.25rem * 0);margin-right:calc(0.25rem * var(--tw-space-x-reverse));margin-left:calc(0.25rem * (1 - 0));margin-left:calc(0.25rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.25rem * calc(1 - 0));margin-left:calc(0.25rem * calc(1 - var(--tw-space-x-reverse)))}
 .space-x-1\.5 > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.375rem * 0);margin-right:calc(0.375rem * var(--tw-space-x-reverse));margin-left:calc(0.375rem * (1 - 0));margin-left:calc(0.375rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.375rem * calc(1 - 0));margin-left:calc(0.375rem * calc(1 - var(--tw-space-x-reverse)))}
 .space-x-2 > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(0.5rem * 0);margin-right:calc(0.5rem * var(--tw-space-x-reverse));margin-left:calc(0.5rem * (1 - 0));margin-left:calc(0.5rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(0.5rem * calc(1 - 0));margin-left:calc(0.5rem * calc(1 - var(--tw-space-x-reverse)))}
@@ -4838,8 +4839,8 @@ input[type=radio].sr-only:checked ~ div#nav-cart span {
   border-bottom-color: rgba(0, 0, 0, 0.1) !important;
 }
 @media (max-width: 768px) {
-  .logo-footer {
-    transform: translateX(-100px);
+  .store-footer .navbar-brand img {
+    margin-left: -100px !important;
   }
 }
 .main-menu > li > a[href*=offer]{--tw-text-opacity:1;color:rgba(153, 27, 27, 1);color:rgba(153, 27, 27, var(--tw-text-opacity, 1))}
@@ -5883,7 +5884,8 @@ salla-add-product-button {
 }
 salla-add-product-button {
   transform: translateY(-75px);
-  background-color: black;
+  background-color: #414042;
+  background-color: var(--color-primary);
   justify-self: center;
   display: block;
   margin: 0 auto;
