--- a/src/views/components/home/brands.twig
+++ b/src/views/components/home/brands.twig
@@ -17,7 +17,7 @@
       </div>
     {% endif %}
     <div class="relative w-full overflow-hidden">
-        <div class="flex flex-col gap-4 lg:gap-8">
+        <div class="flex flex-col lg:gap-8">
             {% for i in range(0, component.brands|length, 5) %}
               <div class="flex space-x-4 {% if loop.index is even %}animate-marquee{% else %}animate-marquee-reverse{% endif %}">
                   {% for brand in component.brands[i:i+5] %}
